@@ -83,6 +83,13 @@ enum guCommandIds {
     ID_ALBUM_SETSELECTION,
     ID_ALBUM_SELECT_COVER,
     //
+    ID_ALBUM_ORDER_NAME,
+    ID_ALBUM_ORDER_YEAR,
+    ID_ALBUM_ORDER_YEAR_REVERSE,
+    ID_ALBUM_ORDER_ARTIST_NAME,
+    ID_ALBUM_ORDER_ARTIST_YEAR,
+    ID_ALBUM_ORDER_ARTIST_YEAR_REVERSE,
+    //
     ID_SONG_PLAY,
     ID_SONG_PLAYALL,
     ID_SONG_ENQUEUE,
